# Bmedemo

./: README.md
Android/MyApplication/app/: CMakeLists.txt  build.gradle
Android/MyApplication/app/src/androidTest/java/com/example/kosta/myapplication/: ExampleInstrumentedTest.java
Android/MyApplication/app/src/main/: AndroidManifest.xml
Android/MyApplication/app/src/main/cpp/: bmelib.cpp  com_beeple_bmesdk_BmeSdk.h  sci_base_def.h  sci_beep_old.cpp  sci_bitcorrect.cpp  sci_bitcorrect.h  sci_dpskmod.hpp  sci_fft.hpp  sci_preamble.cpp  sci_rs.cpp  sci_rs.h  sci_transform.cpp  sci_transmitter.hpp  sci_transmitter_helper.cpp
Android/MyApplication/app/src/main/java/com/beeple/bmesdk/: BmeSdk.java
Android/MyApplication/app/src/test/java/com/example/kosta/myapplication/: ExampleUnitTest.java
Android/MyApplication/gradle/wrapper/: gradle-wrapper.properties
Android/MyApplication/libbme/: build.gradle  libbme.aar
Android/bmedemo/app/: build.gradle
Android/bmedemo/gradle/wrapper/: gradle-wrapper.properties
Android/doc/html/: _bme_sdk_8java_source.html  annotated.html  classcom_1_1beeple_1_1bmesdk_1_1_bme_sdk-members.html  classcom_1_1beeple_1_1bmesdk_1_1_bme_sdk.html  classes.html  files.html  functions.html  functions_func.html  index.html
Android/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  searchdata.js
IOS/BM/BM/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  doxi  main.m
IOS/BM/BM.xcodeproj/: project.pbxproj
IOS/BM/BM/BM.xcdatamodeld/: .xccurrentversion
IOS/BM/BM/Base.lproj/: Main.storyboard
IOS/BM/BM/binah.ai.BM 2018-09-05 20:42.58.830.xcappdata/: AppDataInfo.plist
IOS/IOSENCODER.xcworkspace/: contents.xcworkspacedata
IOS/bmelib/bmelib/: bmelib.h  bmelib.mm  debug.txt  doxifile  sci_beep_old.cpp  sci_beep_old.h  sci_desc.h  sci_dpskmod.cpp  sci_fft.cpp  sci_preamble.hpp  sci_rs.h  sci_transform.hpp  sci_transmitter.cpp  sci_transmitter_helper.hpp
IOS/bmelib/bmelib.xcodeproj/: project.pbxproj
IOS/libs/: bmelib.h
(+98 files in other folders)
